--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -1105,3 +1105,251 @@ body {
     margin-bottom: 20px;
   }
 }
+
+
+/* -------------------------------------------------------------------------- */
+/*                                   AUTHOR                                   */
+/* -------------------------------------------------------------------------- */
+
+.layout_author{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: auto;
+  background-color: white;
+  border-radius: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  width:calc(100% - 40px);
+  padding: 20px;
+  .search_container{
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px 0 10px;
+    margin-bottom: 20px;
+    div:first-child{
+      width:50%;
+    }
+    i{
+      color: @blue;
+      font-size: 1rem;
+      margin-right: 10px;
+    }
+    input{
+      width: 90%;
+      height: 40px;
+      border-radius: 20px;
+      border: 1px solid transparent;
+      padding: 0 20px;
+      font-size: 1rem;
+      color: @black;
+      background-color: @gray_bg;
+      outline:none;
+      font-family: @text;
+      transition: all 0.2s ease-in-out;
+      &:focus {
+        border: 1px solid @blue;
+        border-radius: 15px;
+        transition: all 0.2s ease-in-out;
+      }
+    }
+    // Buton
+    .add_author_container{
+      display:flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: auto;
+      border-radius: 20px;
+      border: 1px solid transparent;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: white;
+      background-color: @blue;
+      outline:none;
+      font-family: @text;
+      transition: all 0.2s ease-in-out;
+      cursor: pointer;
+      &:hover {
+        border: 1px solid @blue;
+        border-radius: 15px;
+        transition: all 0.2s ease-in-out;
+      }
+      i{
+        margin-right: 10px;
+        color: white;
+      }
+    }
+  }
+  .author_list{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    .author_card{
+      border: 2px solid @blue;
+      background-color: @gray_bg;
+      transition: all 0.2s ease-in-out;
+      width: 250px;
+      min-width: 33%;
+      padding:25px 0;
+      height: auto;
+      margin: 20px;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      border-radius: 15px;
+      .author_image{
+        width: 200px;
+        height: 250px;
+        background-color: red;
+        border-radius: 10px;
+      }
+      .author_name{
+        font-size: 1.1rem;
+        font-weight: bold;
+        color: @blue;
+        font-family: @text;
+        margin-top: 10px;
+        text-align: center;
+      }
+      .number_written{
+        font-size: 0.8rem;
+        color: @black;
+        font-family: @text;
+        margin-top: 5px;
+        text-align: center;
+        &::before {
+          content: "Written ";
+        }
+        &::after {
+          content: " books";
+        }
+
+      }
+      .author_button{
+        background-color: @blue;
+        color:white;
+        padding: 10px 20px;
+        border-radius: 25px;
+        font-size: 1rem;
+        font-weight: bold;
+        font-family: @text;
+        cursor: pointer;
+        width:fit-content;
+        margin-top: 20px;
+        transition: all 0.2s ease-in-out;
+        &:hover{
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+          color: @blue;
+          background-color: white;
+        }
+      }
+    }
+  }
+}
+
+/* ------------------------------- ADD AUTHOR ------------------------------- */
+.create_author_form{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width:100%;
+  height: auto;
+  label{
+    font-size: 1rem;
+    color: @gray;
+    font-family: @text;
+    font-weight: bold;
+  }
+  input[type="text"]{
+    width: 100%;
+    margin-left: 20px;
+    height: 40px;
+    border:2px solid transparent;
+    border-bottom: 2px solid @blue;
+    background-color: @gray_bg;
+    padding: 0 20px;
+    font-size: .8rem;
+    color: @black;
+    outline:none;
+    font-family: @text;
+    transition: all 0.2s ease-in-out;
+    &:focus {
+      border: 2px solid @blue;
+      border-radius: 15px;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+  .inputfile{
+    width: 100%;
+    margin-left: 20px;
+    height: 40px;
+    border:2px solid transparent;
+    border-bottom: 2px solid @blue;
+    background-color: @gray_bg;
+    padding: 0 20px;
+    font-size: .8rem;
+    color: @black;
+    outline:none;
+    font-family: @text;
+    transition: all 0.2s ease-in-out;
+    &:focus {
+      border: 2px solid @blue;
+      border-radius: 15px;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+
+  .title_group, .author_group{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width:50%;
+    margin-bottom: 20px;
+  }
+  .genres_group{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width:50%;
+    margin-bottom: 20px;
+    
+    .genresList{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width:100%;
+      flex-wrap: wrap;
+      margin-left:20px;
+      border:2px solid @blue;
+      border-radius: 10px;
+      padding: 10px;
+
+      .genre_item{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-right: 10px;
+        padding: 5px 0px;
+        input[type="checkbox"]{
+          width: 15px;
+          height: 15px;
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+}
