--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -1293,3 +1293,165 @@ body {
   height: 15px;
   margin-right: 5px;
 }
+/* -------------------------------------------------------------------------- */
+/*                               AUTHORD PAGE ID                              */
+/* -------------------------------------------------------------------------- */
+.right_book .author_informations {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.right_book .author_informations .actions_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 100px;
+  flex-wrap: wrap;
+}
+.right_book .author_informations .actions_container .button_author_edit {
+  background-color: #406bde;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: 'Noto Sans';
+  cursor: pointer;
+  width: fit-content;
+  transition: all 0.2s ease-in-out;
+}
+.right_book .author_informations .actions_container .button_author_edit:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+  color: #406bde;
+  background-color: white;
+}
+.right_book .author_informations .actions_container .button_author_delete {
+  color: red;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: normal;
+  font-family: 'Noto Sans';
+  cursor: pointer;
+  width: fit-content;
+  margin-bottom: 10px;
+  transition: all 0.2s ease-in-out;
+  border-bottom: 2px solid red;
+  padding: 0 5px;
+}
+.right_book .author_informations .author_informations_title {
+  font-size: 1.5rem;
+  font-weight: bolder;
+  color: #406bde;
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  width: 100%;
+  text-align: center;
+}
+.right_book .author_informations .author_informations_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+.right_book .author_informations .author_informations_list .author_informations_item {
+  transition: all 0.2s ease-in-out;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  border-radius: 10px;
+}
+.right_book .author_informations .author_informations_list .author_informations_item p {
+  font-size: 1rem;
+  color: #17202A;
+  font-weight: bold;
+  font-family: 'Noto Sans';
+  margin-top: 10px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.right_book .author_informations .author_informations_list .author_informations_item span {
+  font-size: 1rem;
+  color: #406bde;
+  font-weight: bold;
+  font-family: 'Noto Sans';
+  margin-top: 10px;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  border-bottom: 2px solid #406bde;
+  padding: 0 5px;
+}
+.right_book .author_informations .author_informations_list .author_informations_item .bg-people {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 0 auto;
+  border: 2px solid #406bde;
+  margin-bottom: 50px;
+}
+.left_book_author {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  border-radius: 10px;
+  margin-left: 20px;
+  padding: 40px;
+}
+.left_book_author h1 {
+  font-size: 1.5rem;
+  font-weight: bolder;
+  color: #406bde;
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+}
+.left_book_author .book_list_author {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+.left_book_author .book_list_author .book_list_author_item {
+  transition: all 0.2s ease-in-out;
+  width: 200px;
+  min-width: 33%;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10px;
+}
+.left_book_author .book_list_author .book_list_author_item:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.left_book_author .book_list_author .book_list_author_item .book_list_author_item_image {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  border: 1px solid #878e94;
+}
+.left_book_author .book_list_author .book_list_author_item .book_list_author_item_name {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #406bde;
+  font-family: 'Noto Sans';
+  margin-top: 10px;
+  text-align: center;
+}
