--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -1353,3 +1353,176 @@ body {
     }
   }
 }
+
+
+/* -------------------------------------------------------------------------- */
+/*                               AUTHORD PAGE ID                              */
+/* -------------------------------------------------------------------------- */
+
+.right_book{
+  .author_informations{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    .actions_container{
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width:100%;
+      margin-top: 100px;
+      flex-wrap: wrap;
+      .button_author_edit{
+        background-color: @blue;
+        color:white;
+        padding: 10px 20px;
+        border-radius: 25px;
+        font-size: 1rem;
+        font-weight: bold;
+        font-family: @text;
+        cursor: pointer;
+        width:fit-content;
+        transition: all 0.2s ease-in-out;
+        &:hover{
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+          color: @blue;
+          background-color: white;
+        }
+      }
+      .button_author_delete{
+        color:red;
+        padding: 10px 20px;
+        font-size: 1rem;
+        font-weight: normal;
+        font-family: @text;
+        cursor: pointer;
+        width:fit-content;
+        margin-bottom: 10px;
+        transition: all 0.2s ease-in-out;
+        border-bottom: 2px solid red;
+        padding:0 5px;
+      
+      }
+
+    }
+
+    .author_informations_title{
+      font-size: 1.5rem;
+      font-weight: bolder;
+      color: @blue;
+      font-family: @title;
+      text-transform: uppercase;
+      width:100%;
+      text-align: center;
+    }
+    .author_informations_list{
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-top: 40px;
+      .author_informations_item{
+        transition: all 0.2s ease-in-out;
+        width: 100%;
+        display:flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: left;
+        border-radius: 10px;
+        p{
+          font-size: 1rem;
+          color: @black;
+          font-weight: bold;
+          font-family: @text;
+          margin-top: 10px;
+          text-align: center;
+          margin-bottom: 10px;
+        }
+        span{
+          font-size: 1rem;
+          color: @blue;
+          font-weight: bold;
+          font-family: @text;
+          margin-top: 10px;
+          text-align: center;
+          margin-bottom: 10px;
+          margin-right:20px;
+          border-bottom: 2px solid @blue;
+          padding:0 5px;
+        
+        }
+        .bg-people{
+          width:200px;
+          height:200px;
+          border-radius: 50%;
+          margin:0 auto;
+          border: 2px solid @blue;
+          margin-bottom: 50px;
+        }
+      }
+    }
+  }
+}
+.left_book_author{
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  border-radius: 10px;
+  margin-left:20px;
+  padding:40px;
+  h1{
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color: @blue;
+    font-family: @title;
+    text-transform: uppercase;
+  }
+  .book_list_author{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    .book_list_author_item{
+      &:hover{
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+        transition: all 0.2s ease-in-out;
+        cursor: pointer;
+      }
+      transition: all 0.2s ease-in-out;
+      width: 200px;
+      min-width: 33%;
+      margin: 20px;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      border-radius: 10px;
+      .book_list_author_item_image{
+        width: 100%;
+        height: 300px;
+        border-radius: 10px;
+        border:1px solid @gray;
+
+      }
+      .book_list_author_item_name{
+        font-size: 1.1rem;
+        font-weight: bold;
+        color: @blue;
+        font-family: @text;
+        margin-top: 10px;
+        text-align: center;
+      }
+    }
+  }
+}
