BOOKS ID : when create comment, change select user by input

--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -1117,12 +1117,11 @@ body {
     label {
       margin-right: 10px;     
     }
-    select{
+    input[type="text"]{
       width: 100%;
       margin-left: 20px;
       height: 40px;
-      border:2px solid transparent;
-      border-bottom: 2px solid @blue;
+      border: 2px solid @blue;
       background-color: @gray_bg;
       padding: 0 20px;
       font-size: .8rem;
@@ -1130,6 +1129,7 @@ body {
       outline:none;
       font-family: @text;
       transition: all 0.2s ease-in-out;
+      border-radius: 15px;
     }
   
   }
