--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -1069,12 +1069,11 @@ body {
 .create_post_form .select_author_container label {
   margin-right: 10px;
 }
-.create_post_form .select_author_container select {
+.create_post_form .select_author_container input[type="text"] {
   width: 100%;
   margin-left: 20px;
   height: 40px;
-  border: 2px solid transparent;
-  border-bottom: 2px solid #406bde;
+  border: 2px solid #406bde;
   background-color: #f5f5f5;
   padding: 0 20px;
   font-size: 0.8rem;
@@ -1082,6 +1081,7 @@ body {
   outline: none;
   font-family: 'Noto Sans';
   transition: all 0.2s ease-in-out;
+  border-radius: 15px;
 }
 .create_post_form .title_group {
   display: flex;
