BOOKS : Update verification fields + eslint correct

--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -715,7 +715,7 @@ body {
     font-family: @text;
     font-weight: bold;
   }
-  input[type="text"]{
+  input[type="text"], input[type="date"]{
     width: 100%;
     margin-left: 20px;
     height: 40px;
@@ -748,7 +748,7 @@ body {
     font-family: @text;
     transition: all 0.2s ease-in-out;
   }
-  .title_group, .author_group{
+  .title_group, .author_group, .date_group{
     display: flex;
     flex-direction: row;
     align-items: center;
