--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -678,7 +678,8 @@ body {
   font-family: 'Noto Sans';
   font-weight: bold;
 }
-.create_book_form input[type="text"] {
+.create_book_form input[type="text"],
+.create_book_form input[type="date"] {
   width: 100%;
   margin-left: 20px;
   height: 40px;
@@ -692,7 +693,8 @@ body {
   font-family: 'Noto Sans';
   transition: all 0.2s ease-in-out;
 }
-.create_book_form input[type="text"]:focus {
+.create_book_form input[type="text"]:focus,
+.create_book_form input[type="date"]:focus {
   border: 2px solid #406bde;
   border-radius: 15px;
   transition: all 0.2s ease-in-out;
@@ -712,7 +714,8 @@ body {
   transition: all 0.2s ease-in-out;
 }
 .create_book_form .title_group,
-.create_book_form .author_group {
+.create_book_form .author_group,
+.create_book_form .date_group {
   display: flex;
   flex-direction: row;
   align-items: center;
