--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -681,6 +681,18 @@ body {
   }
 }
 
+.delete_text{
+  font-size: 1rem;
+  color: red;
+  font-family: @text;
+  margin: 0;
+  padding:0;
+  margin-top: 20px;
+  text-align: center;
+  width:100%;
+  font-weight: bold;
+}
+
 /* ------------------------------- CREATE BOOK ------------------------------ */
 .create_book_button{
   background-color: @blue;
