Book ID : Edit comment not working + solve errors in console

--- a/library-site/src/components/comment/comment.module.less
+++ b/library-site/src/components/comment/comment.module.less
@@ -48,5 +48,27 @@
             content: 'Posted on ';
         }
     }
+    
+}
+.commentActions{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 0.8rem;
+    color: @gray;
 
+    button {
+        margin-left: 10px;
+        padding:2px 5px;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+        border: 1px solid transparent;
+        border-bottom: 1px solid @blue;
+        &:hover {
+            color: @blue;
+            border: 1px solid @blue;
+        }
+    }
 }
