--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -980,6 +980,8 @@ body {
   z-index: 1;
   background-color: white;
   border-radius: 10px;
+  color: #17202A;
+  box-shadow: none;
 }
 .book_comments_wrapper {
   display: flex;
@@ -996,7 +998,6 @@ body {
   height: auto;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  box-shadow: none;
   color: #17202A;
   font-family: 'Noto Sans';
   font-size: 1rem;
@@ -1004,6 +1005,7 @@ body {
   font-weight: normal;
   z-index: 0;
   padding: 20px;
+  box-shadow: none;
 }
 .book_comments_wrapper .MuiPaper-root .comments {
   display: flex;
@@ -1040,6 +1042,9 @@ body {
   color: #406bde;
   background-color: white;
   border: 2px solid #406bde;
+}
+.drawer_header_title .book_comments_button i {
+  color: white;
 }
 /* --------------------------- POST COMMENT MODAL --------------------------- */
 .create_post_form {
