--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@tailwind base; // es-lint-disable-line
+@tailwind components; // es-lint-disable-line
+@tailwind utilities; // es-lint-disable-line
 
 @gray : #878e94;
 @gray_bg : #f5f5f5;
