--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -904,6 +904,7 @@ body {
       background-color: red;
       border-radius: 10px;
       border:1px solid @gray;
+      margin:0 auto;
     }
     .book_title{
       font-size: 1.5rem;
