--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -1193,6 +1193,20 @@ body {
     margin-bottom: 20px;
     div:first-child{
       width:50%;
+      display:flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+      i{
+        color: @blue;
+        font-size: 1rem;
+      }
+      div{
+        border-bottom: 1px solid @blue;
+        padding: 10px;
+        width:100%;
+      }
     }
     i{
       color: @blue;
