--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -509,21 +509,19 @@ body {
   align-items: center;
   justify-content: center;
 }
-.layout_book .left_side_book .books_container .search_container {
-  width: 100%;
+.layout_book .left_side_book .books_container .searchBook {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 10px 0 10px;
-  margin-bottom: 20px;
 }
-.layout_book .left_side_book .books_container .search_container i {
+.layout_book .left_side_book .books_container .searchBook i {
   color: #406bde;
   font-size: 1rem;
+  margin-right: 10px;
 }
-.layout_book .left_side_book .books_container .search_container input {
-  width: 92%;
+.layout_book .left_side_book .books_container .searchBook input {
+  width: 100%;
   height: 40px;
   border-radius: 20px;
   border: 1px solid transparent;
@@ -535,10 +533,93 @@ body {
   font-family: 'Noto Sans';
   transition: all 0.2s ease-in-out;
 }
-.layout_book .left_side_book .books_container .search_container input:focus {
+.layout_book .left_side_book .books_container .searchBook input:focus {
   border: 1px solid #406bde;
   border-radius: 15px;
   transition: all 0.2s ease-in-out;
+}
+.layout_book .left_side_book .books_container .search_container {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px 0 10px;
+  margin-bottom: 20px;
+}
+.layout_book .left_side_book .books_container .search_container .select_filter_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+}
+.layout_book .left_side_book .books_container .search_container .select_filter_container .selectFilter {
+  width: 100%;
+  height: 40px;
+  border-radius: 20px;
+  border: 1px solid transparent;
+  padding: 0 20px;
+  font-size: 1rem;
+  color: #17202A;
+  background-color: #f5f5f5;
+  outline: none;
+  font-family: 'Noto Sans';
+  transition: all 0.2s ease-in-out;
+}
+.layout_book .left_side_book .books_container .search_container .select_filter_container .labelSelect {
+  font-size: 1rem;
+  width: 30%;
+  color: #878e94;
+  font-family: 'Noto Sans';
+  font-weight: bold;
+  padding: 0 10px;
+  transition: all 0.2s ease-in-out;
+}
+.layout_book .left_side_book .books_container .search_container .select_filter_container .labelSelect:hover {
+  cursor: pointer;
+  color: #406bde;
+}
+.layout_book .left_side_book .books_container .search_container .filter_buttons_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+  column-gap: 20px;
+  row-gap: 5px;
+  flex-wrap: wrap;
+}
+.layout_book .left_side_book .books_container .search_container .filter_buttons_container button {
+  background-color: #406bde;
+  color: white;
+  padding: 0px 20px;
+  border-radius: 25px;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: 'Noto Sans';
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.layout_book .left_side_book .books_container .search_container .filter_buttons_container button i {
+  color: white;
+  margin: 0;
+  margin-left: 5px;
+  padding: 0;
+}
+.layout_book .left_side_book .books_container .search_container .filter_buttons_container button:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+  color: #406bde;
+  background-color: white;
+}
+.layout_book .left_side_book .books_container .search_container .filter_buttons_container button:hover i {
+  color: #406bde;
+  margin: 0;
+  margin-left: 5px;
+  padding: 0;
 }
 .layout_book .left_side_book .books_container .filter_container {
   display: flex;
@@ -551,6 +632,7 @@ body {
   font-size: 1rem;
   border-bottom: 2px solid #cccccc;
   padding: 0px 10px;
+  margin-top: 20px;
 }
 .layout_book .left_side_book .books_container .filter_container .filter_title {
   margin-right: 20px;
