--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -538,20 +538,18 @@ body {
         justify-content: center;
 
       }
-      .search_container{
-        width: 100%;
-        display:flex;
+      .searchBook{
+        display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        padding: 0 10px 0 10px;
-        margin-bottom: 20px;
         i{
           color: @blue;
           font-size: 1rem;
+          margin-right: 10px;
         }
         input{
-          width: 92%;
+          width: 100%;
           height: 40px;
           border-radius: 20px;
           border: 1px solid transparent;
@@ -568,6 +566,92 @@ body {
             transition: all 0.2s ease-in-out;
           }
         }
+      }
+      .search_container{
+        width: 100%;
+        max-width: 500px;
+        display:flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 10px 0 10px;
+        margin-bottom: 20px;
+        
+        
+        
+        .select_filter_container{
+          display:flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          margin-top:20px;
+          .selectFilter{
+            width: 100%;
+            height: 40px;
+            border-radius: 20px;
+            border: 1px solid transparent;
+            padding: 0 20px;
+            font-size: 1rem;
+            color: @black;
+            background-color: @gray_bg;
+            outline:none;
+            font-family: @text;
+            transition: all 0.2s ease-in-out;
+          }
+          .labelSelect{
+            font-size: 1rem;
+            width: 30%;
+            color: @gray;
+            font-family: @text;
+            font-weight: bold;
+            padding: 0 10px;;            
+            transition: all 0.2s ease-in-out;
+            &:hover{
+              cursor: pointer;
+              color: @blue;
+            }
+          }
+        }
+        .filter_buttons_container{
+          display:flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          margin-top:20px;
+          column-gap: 20px;
+          row-gap: 5px;
+          flex-wrap: wrap;
+          button{
+            background-color: @blue;
+            color:white;
+            i{
+              color:white;
+              margin:0;
+              margin-left: 5px;
+              padding:0;
+            }
+            padding: 0px 20px;
+            border-radius: 25px;
+            font-size: 1rem;
+            font-weight: bold;
+            font-family: @text;
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+            &:hover{
+              box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+              color: @blue;
+              background-color: white;
+              i{
+                color: @blue;
+                margin:0;
+                margin-left: 5px;
+                padding:0;
+              }
+            }
+          }
+        }
                 
 
       }
@@ -582,6 +666,7 @@ body {
         font-size: 1rem;
         border-bottom: 2px solid rgb(204, 204, 204);
         padding: 0px 10px;
+        margin-top:20px;
         .filter_title{
           margin-right: 20px;
           font-weight: bold;
