feat(Author ID): add pp

--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -1549,7 +1549,7 @@ body {
   border-bottom: 2px solid #406bde;
   padding: 0 5px;
 }
-.right_book .author_informations .author_informations_list .author_informations_item .bg-people {
+.right_book .author_informations .author_informations_list .author_informations_item .author_image {
   width: 200px;
   height: 200px;
   border-radius: 50%;
