--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -1614,7 +1614,7 @@ body {
           padding:0 5px;
         
         }
-        .bg-people{
+        .author_image{
           width:200px;
           height:200px;
           border-radius: 50%;
