feat(Book Id):add PP

--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -1009,7 +1009,7 @@ body {
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      div{
+      .author_image{
         margin-right: 5px;
         background-color: @blue;
         color:white;
