--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -968,7 +968,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-.layout_book .right_book .book_author div {
+.layout_book .right_book .book_author .author_image {
   margin-right: 5px;
   background-color: #406bde;
   color: white;
